Fixed spacing issue with category title

--- a/scss/_category.scss
+++ b/scss/_category.scss
@@ -3,6 +3,7 @@
 	margin: auto;
 	margin-bottom: 25px;
 	max-width: 1280px;
+	padding-top: 20px;
 	width: 90%;
 }
 
