--- a/style.css
+++ b/style.css
@@ -1187,6 +1187,7 @@ body {
   margin: auto;
   margin-bottom: 25px;
   max-width: 1280px;
+  padding-top: 20px;
   width: 90%; }
 
 .category-post {
